# monitor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  agent  build.sh  monitor_server  plan_improve.txt  run_demo.sh  run_demo_terminals.sh  stop_agents.sh  viewer_cli
.cache/clangd/index/: agent.cpp.6281E8373BCA6B50.idx  ansi_viewer.hpp.3D5DFD995C1ED778.idx  dashboard.hpp.C0310913535041E5.idx  json_helper.hpp.7E136A9CFFF1F32A.idx  metrics_collector.hpp.09858D018348C6BF.idx  metrics_store.hpp.94EF0BA6FEEF4BBC.idx  monitor_server.cpp.364CC713C111DA78.idx  net_framing.hpp.A68B1E0EAB7BFE60.idx  protocol.hpp.8047F8B66A8AC940.idx  thresholds.hpp.A5CD152813D66998.idx
config/: agent.conf  server.conf  server_demo.conf  thresholds.conf
data/: monitor_state.db
deploy/: monitor_agent@.service  monitor_server.service
include/: alerting.hpp  ansi_viewer.hpp  dashboard.hpp  http_api.hpp  json_helper.hpp  json_wrapper.hpp  logger.hpp  metrics_collector.hpp  metrics_store.hpp  net_framing.hpp  protocol.hpp  server_stats.hpp  thresholds.hpp
include/ui/: command_registry.hpp  format.hpp  layout.hpp  theme.hpp  ui_types.hpp
include/ui/screens/: events_screen.hpp  help_screen.hpp  host_detail_screen.hpp  iscreen.hpp  overview_screen.hpp
include/ui/widgets/: event_list.hpp  help_view.hpp  host_table.hpp  metric_card.hpp  panel.hpp  sparkline.hpp  status_bar.hpp  top_bar.hpp
src/agent/: agent.cpp
src/server/: monitor_server.cpp
src/viewer/: viewer_cli.cpp
test/: integration_test.sh  integration_test_full.sh  unit_test.cpp
